--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files":[
+            "app/Http/Controllers/helpers.php"
         ]
     },
     "autoload-dev": {
